goform_redis/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goform
  labels:
    app: goform
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30000
    protocol: TCP
  selector:
    app: goform
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    tier: backend
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
    tier: backend
